--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
  <div  id="content_1"  style="background-color:#0d3b48; position:relative;">
       <div class="container text-center space">
-        <h3>ABOUT</H3>
+        <h3>About</H3>
           <div class="col-md-6">
             <img src="images/skills-graph.png" class="img-responsive">
           </div>
@@ -95,28 +95,57 @@
          
         <div id="graphics_menu">
 
-          <div class="tile scale-anm art all">
-              <img src="images/graphics/1.jpg" alt="" />
+          <div class="tile scale-anm web_banners all">
+              <img src="images/graphics/web_banners/6.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
-              <img src="images/graphics/2.jpg" alt="" />
+              <img src="images/graphics/art/8.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm art all">
+              <img src="images/graphics/art/4.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm logos all">
+              <img src="images/graphics/logos/13.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm broch_cat all">
+              <img src="images/graphics/broch_cat/10.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm logos all">
+              <img src="images/graphics/logos/14.jpg" alt="" />
+          </div>        
+          <div class="tile scale-anm web_banners all">
+              <img src="images/graphics/web_banners/3.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm logos all">
+              <img src="images/graphics/logos/12.jpg" alt="" />
           </div>
           <div class="tile scale-anm web_banners all">
-              <img src="images/graphics/3.jpg" alt="" />
+              <img src="images/graphics/web_banners/8.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
-              <img src="images/graphics/4.jpg" alt="" />
+              <img src="images/graphics/art/1.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
-              <img src="images/graphics/5.jpg" alt="" />
+              <img src="images/graphics/art/5.jpg" alt="" />
           </div>
-          <div class="tile scale-anm web all">
-              <img src="images/graphics/6.jpg" alt="" />
+          <div class="tile scale-anm web_banners all">
+              <img src="images/graphics/web_banners/9.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
-              <img src="images/graphics/7.jpg" alt="" />
+              <img src="images/graphics/art/7.jpg" alt="" />
           </div>
-
+          <div class="tile scale-anm art all">
+              <img src="images/graphics/art/2.jpg" alt="" />
+          </div>  
+          <div class="tile scale-anm logos all">
+              <img src="images/graphics/logos/15.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm broch_cat all">
+              <img src="images/graphics/broch_cat/11.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm broch_cat all">
+              <img src="images/graphics/broch_cat/16.jpg" alt="" />
+          </div>
         </div>
       </div>
   </div> 
