--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
               <img src="images/graphics/web_banners/6.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
+              <img src="images/graphics/art/9.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm art all">
+              <img src="images/graphics/art/10.jpg" alt="" />
+          </div>
+          <div class="tile scale-anm art all">
               <img src="images/graphics/art/8.jpg" alt="" />
           </div>
           <div class="tile scale-anm art all">
