--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
           <div class="col-md-6">
             <p>
-              Hi, my name is Jack Nelson D.G. Crisostomo. I’m a freelance graphic designer and art director in Atlanta. I specialize in web and app design, front end development, user experience, and creating identities and branding. I’ve worked with companies of all shapes and sizes, so contact me if you’d like to work together on your next project.
+              Hi, my name is Jack Nelson D.G. Crisostomo. A Web/Graphic Designer. I've been working in this field for more than 3 years as a part of Advertising team. Maintaining and Creating a User-friendly and Responsive websites are my main task including designing of Company Marketing materials such as Brochure, Catalogs, Branding and Posters. 
             </p>
           </div>
       </div>
